--- a/install
+++ b/install
@@ -18,16 +18,16 @@ require() {
 }
 
 require "ruby" "--version" "ruby" "ruby should be pre-installed" "Panic, or ask a friend for help."
-require "brew" "--version" "0.9.2" "get it now" "because it is teh awesome"
+require "brew" "--version" "0.9.2" "ruby <(curl -fsSkL raw.github.com/mxcl/homebrew/go)" "Homebrew helps install all kinds of command line goodness."
 require "rvm" "version" "1.15" "curl -L https://get.rvm.io | bash -s stable" "rvm helps with ruby. After installing,\nrun 'rvm requirements' then follow directions under Xcode 4.2 and Homebrew."
 require "ruby" "--version" "1.9.3" "rvm install 1.9.3" "ruby is used for combinining markup with templates to generate the site" 
 require "git" "--version" "git" "brew install git" "git is used for version control of files"
 
-echo "Looks like you are ready to blog! Probably, mostly."
+echo "Looks like you are all ready! Probably, mostly."
 echo ""
 echo "Do you have a github account, and membership in the neo4j-contrib Web Masters team? Ask @akollegger."
 echo ""
-echo "If you haven't cloned the repository yet do this:"
+echo "With an account, you can then clone the repository by doing this:"
 echo "git clone git@github.com:neo4j-contrib/neo4j-website.git"
 echo ""
 echo "Finally. Read the readme."
